Add Media Queries for laptop

--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github Users API</title>
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <main>
         <div class="nav">
             <div class="logo">
-                <span>devfinder</span>
+              <span>devfinder</span>
             </div>
             <div class="theme">
-                <span>light</span>
-                <img src="./sunny_white.svg" alt="Light Mode">
+              <span>light</span>
+              <img src="./sunny_white.svg" alt="Light Mode">
             </div>
          </div>
     
@@ -34,9 +35,9 @@
          <div class="content">
             <div class="profile-pic">
                 <img src='https://avatars.githubusercontent.com/u/583231?v=4' id="profile-pic" alt="Profile Pic">
-               </div>
+            </div>
        
-               <div class="user-data">
+            <div class="user-data">
                <div class="basic-information">
                <h2>The Octocat</h2>
                <p>Joined 25 Jan 2011</p>
